--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,26 @@
     </style>
   </head>
   <body>
-    <div class='container'>
-      <h1>It works!</h1>
-      <div>
-        <span>You're ready to start!</span>
-        <span>Skeleton 2, jQuery 2, and AWS Libraries are included.</span>
+    <!-- 1. Add extra div for the SpecHelper to work -->
+    <div class='markup'>
+      <!-- // 2. Add the view-container class -->
+      <div class='view-container container'>
+        <!-- // 3. Wrap landing page in a div and add class landing-view -->
+        <div class='landing-view'>
+          <div class='row'>
+            <div class='one-half column'>
+              <h3>Learn JS, one puzzle at a time.</h3>
+              <a href='#problem-1' class='button button-primary'>Start Now!</a>
+            </div>
+            <div class='one-half column'>
+              <img src='/images/HeroImage.jpg' />
+            </div>
+          </div>
+        </div>
       </div>
     </div>
+    <script type='text/javascript'>
+      $(window).ready(learnjs.appOnReady);
+    </script>
   </body>
 </html>
